# temple-untrap

./: LICENSE  README.md
code/: BoostTestWrapper.cmake  CMakeLists.txt
code/solver/: CMakeLists.txt
code/solver/code/: main.cpp
code/temunt/: CMakeLists.txt
code/temunt/interface/TemUnt/: Code.hh  Code.hpp  Code.hxx  Direction.hh  Direction.hpp  Direction.hxx  Encoding.hh  Encoding.hpp  Encoding.hxx  Situation.hh  Situation.hpp  Situation.hxx  SituationBuilder.hh  SituationBuilder.hpp  SituationBuilder.hxx  Tile.hh  Tile.hpp  Tile.hxx  TileDatabase.hh  TileDatabase.hpp  TileDatabase.hxx  TileEdge.hh  TileEdge.hpp  TileEdge.hxx
code/temunt/private/: Situation.cpp  SituationBuilder.cpp
code/test/: CMakeLists.txt  main.cpp
